--- a/main.tex
+++ b/main.tex
@@ -1703,9 +1703,11 @@
   (3) $\sigma \in \Ker{\rho}$について, $\sigma(1) = 1$ならば,
   $\rho(\sigma)(1) = 1$より$\sigma(2) = 2$,
   $\rho(\sigma)(2) = 2$より$\sigma(3) = 3$,
-  $\rho(\sigma)(3) = 3$より$\sigma(4) = 4$.
-  よって$\sigma = e$.
-  同様に$\sigma(1)$の値で場合分けすることで, $\Ker{\rho} = \{e, x_1, x_2, x_3\}$が得られる.
+  $\rho(\sigma)(3) = 3$より$\sigma(4) = 4$,
+  であることが必要である.
+  よって$\sigma = e$であるか, またはこのような$\sigma$は存在しない. (しかしこの場合は明らかに$\sigma = e$なら$\sigma \in \Ker{\rho}$.)
+  同様に$\sigma(1)$の値で場合分けすることで, $\Ker{\rho}$の要素の候補として$\{e, x_1, x_2, x_3\}$が得られる.
+  準同型定理より$\abs{\Ker{\rho}} = 4$なので, $\Ker{\rho} = \{e, x_1, x_2, x_3\}$である.
 \end{ans}
 
 \end{document}
