--- a/main.tex
+++ b/main.tex
@@ -1705,9 +1705,40 @@
   $\rho(\sigma)(2) = 2$より$\sigma(3) = 3$,
   $\rho(\sigma)(3) = 3$より$\sigma(4) = 4$,
   であることが必要である.
-  よって$\sigma = e$であるか, またはこのような$\sigma$は存在しない. (しかしこの場合は明らかに$\sigma = e$なら$\sigma \in \Ker{\rho}$.)
+  よって$\sigma = e$であるか, または$\sigma(1) = 1$をみたす$\sigma \in \Ker{\rho}$は存在しない. (ただしこの場合は明らかに$\sigma = e$は条件をみたす.)
   同様に$\sigma(1)$の値で場合分けすることで, $\Ker{\rho}$の要素の候補として$\{e, x_1, x_2, x_3\}$が得られる.
   準同型定理より$\abs{\Ker{\rho}} = 4$なので, $\Ker{\rho} = \{e, x_1, x_2, x_3\}$である.
+\end{ans}
+
+\begin{ans}
+  部分群の共役類なるものは本文で定義していないが, $G$の部分群$H$に対して$gHg^{-1}$もまた$G$の部分群なので,
+  $H$と$gHg^{-1}$を部分群として共役であるということにし, この同値関係による同値類を部分群の共役類と呼ぶことにする.
+  また, 共役類の代表元である部分群の生成元を巡回置換の積の形で示せば, 同じ共役類に属する他の部分群の生成元も, その巡回置換の要素の入れ替えによって容易に得られることに注意する.
+  そこで, 各共役類の代表元の生成元を巡回置換の積の形で示すことで解答とする.\\
+  共役な部分群の位数は等しく, $\mathfrak{S}_4$の部分群の位数は1, 2, 3, 4, 6, 8, 12, 24のいずれかなので, それぞれについて考察する.\\
+  \underline{位数1:} $\{e\}$のみ. \\
+  \underline{位数2:} 部分群は位数$2$の元$g$で生成される.
+  $\mathfrak{S}_4$の元で位数が$2$であるのは, 型としては$(2)$と$(2, 2)$のみである.
+  よって, 部分群の共役類は$2$つあり, それぞれの代表元として$\gen{(1\ 2)}$と$\gen{(1\ 2)(3\ 4)}$を挙げることができる.\\
+  \underline{位数3:} 部分群は位数$3$の元$g$で生成される.
+  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみである.
+  よって, 部分群の共役類はただ$1$つで, 代表元として$\gen{(1\ 2\ 3)}$を挙げることができる.\\
+  \underline{位数4:} (i) 部分群が位数$4$の元を含むならば, その部分群は位数$4$の元$g$で生成される.
+  $\mathfrak{S}_4$の元で位数が$4$であるのは, 型としては$(4)$のみであり,
+  この場合の代表元として$\gen{(1\ 2\ 3\ 4)}$を挙げることができる.
+  (ii) 部分群が位数$4$の元を含まないとき, 単位元以外の元は位数$2$の元である.
+  そのうちの$1$つを$(1\ 2)$とする.
+  もう$1$つの元としては, 代表元を考えているので, $(1\ 3)$, $(1\ 4)$, $(3\ 4)$のみをチェックすればよいが,
+  これらのうち$(1\ 2)$と組み合わせて位数$4$の部分群を生成するのは$(3\ 4)$のみである.
+  したがって, この場合の代表元としては$\gen{(1\ 2)(3\ 4)}$を挙げることができる.\\
+  \underline{位数6:} 演習問題2.10.8 (1) で示したように, この部分群には位数$3$の元が存在する.
+  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみであるから,
+  この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.8より, この部分群には位数$2$の元が存在する.
+  その元の$1$つとしては, 代表元を考えているので, $(1\ 2)$, $(1\ 3)$, $(1\ 4)$のみをチェックすればよい.
+  これらのうち$(1\ 2\ 3)$と組み合わせて位数$6$の部分群を生成するのは, $(1\ 2)$と$(1\ 3)$のみである.
+  ((1\ 4)(1 2 3) = (1\ 2\ 3\ 4)で位数$4$の元ができるので, $(1\ 4)$は除外される.)
+  どちらも同じ部分群を生成するので, 代表元としては$\gen{(1\ 2\ 3)(1\ 2)}$を挙げることができる.\\
+  \underline{位数8:} to be written
 \end{ans}
 
 \end{document}
