--- a/main.tex
+++ b/main.tex
@@ -1716,29 +1716,87 @@
   また, 共役類の代表元である部分群の生成元を巡回置換の積の形で示せば, 同じ共役類に属する他の部分群の生成元も, その巡回置換の要素の入れ替えによって容易に得られることに注意する.
   そこで, 各共役類の代表元の生成元を巡回置換の積の形で示すことで解答とする.\\
   共役な部分群の位数は等しく, $\mathfrak{S}_4$の部分群の位数は1, 2, 3, 4, 6, 8, 12, 24のいずれかなので, それぞれについて考察する.\\
-  \underline{位数1:} $\{e\}$のみ. \\
-  \underline{位数2:} 部分群は位数$2$の元$g$で生成される.
+  \underline{位数$1$:}
+  $\{e\}$のみ. \\
+  \underline{位数$2$:}
+  部分群は位数$2$の元$g$で生成される.
   $\mathfrak{S}_4$の元で位数が$2$であるのは, 型としては$(2)$と$(2, 2)$のみである.
   よって, 部分群の共役類は$2$つあり, それぞれの代表元として$\gen{(1\ 2)}$と$\gen{(1\ 2)(3\ 4)}$を挙げることができる.\\
-  \underline{位数3:} 部分群は位数$3$の元$g$で生成される.
+  \underline{位数$3$:} 部分群は位数$3$の元$g$で生成される.
   $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみである.
   よって, 部分群の共役類はただ$1$つで, 代表元として$\gen{(1\ 2\ 3)}$を挙げることができる.\\
-  \underline{位数4:} (i) 部分群が位数$4$の元を含むならば, その部分群は位数$4$の元$g$で生成される.
+  \underline{位数$4$:}
+  (i) 部分群が位数$4$の元を含むならば, その部分群は位数$4$の元$g$で生成される.
   $\mathfrak{S}_4$の元で位数が$4$であるのは, 型としては$(4)$のみであり,
   この場合の代表元として$\gen{(1\ 2\ 3\ 4)}$を挙げることができる.
-  (ii) 部分群が位数$4$の元を含まないとき, 単位元以外の元は位数$2$の元である.
-  そのうちの$1$つを$(1\ 2)$とする.
-  もう$1$つの元としては, 代表元を考えているので, $(1\ 3)$, $(1\ 4)$, $(3\ 4)$のみをチェックすればよいが,
+  (ii) 部分群が位数$4$の元を含まないとき, 単位元以外の$3$つの元は位数$2$の元である.
+  (ii-a) 位数$2$の元で型$(2)$のものが$2$つ以上あるとし, そのうちの$1$つを$(1\ 2)$とする.
+  もう$1$つの型$(2)$の元としては, 代表元を考えているので, $(1\ 3)$, $(3\ 4)$のみをチェックすればよいが,
   これらのうち$(1\ 2)$と組み合わせて位数$4$の部分群を生成するのは$(3\ 4)$のみである.
-  したがって, この場合の代表元としては$\gen{(1\ 2)(3\ 4)}$を挙げることができる.\\
-  \underline{位数6:} 演習問題2.10.8 (1) で示したように, この部分群には位数$3$の元が存在する.
+  したがって, この場合の代表元としては$\gen{(1\ 2), (3\ 4)}$を挙げることができる.
+  (ii-b) 位数$2$の元で型$(2, 2)$のものが$2$つ以上あるとし, そのうちの$1$つを$(1\ 2)(3\ 4)$とする.
+  もう$1$つの型$(2, 2)$の元としては, 代表元を考えているので, $(1\ 3)(2\ 4)$のみチェックすればよい.
+  この$2$元は部分群$\{e, (1\ 2)(3\ 4), (1\ 3)(2\ 4), (1\ 4)(2\ 3)\}$を生成することが確かめられるので,
+  この部分群$\gen{(1\ 2)(3\ 4), (1\ 3)(2\ 4)}$を代表元として挙げることができる.
+  (この場合は部分群の共役類がこの$1$元のみからなる.)\\
+  \underline{位数$6$:}
+  演習問題2.10.8 (1) で示したように, この部分群には位数$3$の元が存在する.
   $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみであるから,
-  この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.8より, この部分群には位数$2$の元が存在する.
-  その元の$1$つとしては, 代表元を考えているので, $(1\ 2)$, $(1\ 3)$, $(1\ 4)$のみをチェックすればよい.
-  これらのうち$(1\ 2\ 3)$と組み合わせて位数$6$の部分群を生成するのは, $(1\ 2)$と$(1\ 3)$のみである.
+  この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.8より, この部分群には位数$2$の元で同じ型のものが$3$つ存在する.
+  これらの型$(2, 2)$だとすると上でみたことから位数$4$の部分群があることになり矛盾するので, これらの型は$(2)$である.
+  そこでその元の$1$つとしては, (代表元を考えているので) $(1\ 2)$と$(1\ 4)$のみをチェックすればよい.
+  これらのうち$(1\ 2\ 3)$と組み合わせて位数$6$の部分群を生成するのは, $(1\ 2)$のみである.
   ((1\ 4)(1 2 3) = (1\ 2\ 3\ 4)で位数$4$の元ができるので, $(1\ 4)$は除外される.)
-  どちらも同じ部分群を生成するので, 代表元としては$\gen{(1\ 2\ 3)(1\ 2)}$を挙げることができる.\\
-  \underline{位数8:} to be written
+  よって代表元としては$\gen{(1\ 2\ 3), (1\ 2)} (\simeq \mathfrak{S}_3)$を挙げることができる.\\
+  \underline{位数$8$:}
+  この部分群がもし型$(2)$の元を3つ以上含むとすると, その部分群として$\mathfrak{S}_3$と同型な群があることになり矛盾.
+  したがって型$(2)$の元は$2$つ以下である.また型$(2, 2)$の元は$\mathfrak{S}_4$には3つしかない.
+  したがって, 位数$8$の部分群は, 型$(4)$の元を$2$つ以上含むことになる.
+  代表元を考えているので, $(1\ 2\ 3\ 4)$は必ず含まれるとし, これと別の$(1\ i\ j\ k)$の形の元を含むと考えてよい.
+  この組み合わせは$5$通りあるが,
+  \begin{align*}
+    (1\ 2\ 3\ 4)(1\ 2\ 4\ 3) &= (1\ 3\ 2)\\
+    (1\ 2\ 3\ 4)(1\ 3\ 2\ 4) &= (1\ 4\ 2)\\
+    (1\ 2\ 3\ 4)(1\ 3\ 4\ 2) &= (1\ 4\ 3)\\
+    (1\ 2\ 3\ 4)(1\ 4\ 2\ 3) &= (2\ 4\ 3)\\
+    (1\ 2\ 3\ 4)(1\ 4\ 3\ 2) &= e\\
+  \end{align*}
+  により, 位数$3$の元を生成しないのは$(1\ 2\ 3\ 4)$と$(1\ 4\ 3\ 2) = (1\ 2\ 3\ 4)^{-1}$の組み合わせのみである.
+  したがって型$(4)$の元はこの$2$つのみと考えてよい.
+  型$(2)$の元について再び考えると, その共役の作用によって$(1\ 2\ 3\ 4)$が上で除外された型$(4)$の元に移ってはいけないことから,
+  $(1\ 2), (1\ 4), (2\ 3), (3\ 4)$は除外される. したがって残りは$(1\ 3)$と$(2\ 4)$であるが,
+  ここまでで残ったものをすべて書き出すと,
+  $\{e, (1\ 2\ 3\ 4), (1\ 4\ 3\ 2), (1\ 3), (2\ 4), (1\ 2)(3\ 4), (1\ 3)(2\ 4), (1\ 4)(2\ 3) \}$
+  は$8$つの元からなる. $\mathfrak{S_4}$の位数$8$の部分群 (と同型な群) として少なくとも$D_4$があるので,
+  この$8$つの元からなる集合が$D_4$と同型な部分群ということになる.
+  生成元を簡潔に書くと, $\gen{(1\ 2\ 3\ 4), (1\ 3)}$.\\
+  \underline{位数$12$:}
+  位数$12$の部分群は, 演習問題2.8.2より正規部分群である.
+  よってこの部分群は共役類の和であり,
+  そこに含まれる元と同じ型の元はすべて含まれていなければならない.
+  型ごとに元の数を確認すると,
+  \begin{itemize}
+    \item 型$(1)$: $1$つ
+    \item 型$(2)$: $6$つ
+    \item 型$(3)$: $8$つ
+    \item 型$(4)$: $6$つ
+    \item 型$(2, 2)$: $3$つ
+  \end{itemize}
+  であり, 部分群に$e$が必ず含まれることから始めて考察すると,
+  型$(1)$, 型$(2, 2)$, 型$(3)$の元によってこの部分群は構成されることになり, 群構造は$1$つに定まる.
+  これはあきらかに$A_4$である.
+  あまり意味はないがここまでと同様に生成元で簡潔に書くと, $\gen{(1\ 2\ 3), (1\ 2)(3\ 4)}$となる.\\
+  \underline{位数$24$:} これは$\mathfrak{S}_4$自身.\\
+  以上をまとめると, 共役類の代表元は,
+  $\{e\}$, $\gen{(1\ 2)}$, $\gen{(1\ 2)(3\ 4)}$, $\gen{(1\ 2\ 3)}$,
+  $\gen{(1\ 2\ 3\ 4)}$, $\gen{(1\ 2), (3\ 4)}$, $\gen{(1\ 2)(3\ 4), (1\ 3)(2\ 4)}$,
+  $\gen{(1\ 2\ 3), (1\ 2)} (\simeq \mathfrak{S}_3)$,
+  $\gen{(1\ 2\ 3\ 4), (1\ 3)} (\simeq D_4)$,
+  $\gen{(1\ 2\ 3), (1\ 2)(3\ 4)} (= A_4)$,
+  $\mathfrak{S}_4$.
+  正規部分群となるのは, 位数$12$の場合に言及したとおり, 部分群が共役類の和となる場合である.
+  これをみたすのは, $\{e\}$, $\gen{(1\ 2)(3\ 4), (1\ 3)(2\ 4)}$,
+  $\gen{(1\ 2\ 3), (1\ 2)(3\ 4)} (= A_4)$, $\mathfrak{S}_4$.
 \end{ans}
 
 \end{document}
