--- a/main.tex
+++ b/main.tex
@@ -1569,7 +1569,8 @@
   $A_5$においても$\sigma$と$(1\ 2)(3\ 4)$が共役であることが分かる.
   すなわち, $(1\ 2)(3\ 4)$を代表元とする$\mathfrak{S}_5$の共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2)(3\ 4)$がそのまま代表元となる.
 
-  \underline{$1$について.} 共役類が$1$元集合なので, そのまま$A_5$の共役類の代表元となっている.
+  \underline{$1$について.} 共役類が$1$元集合なので, そのまま$A_5$の共役類の代表元となっている.\\
+  (別解) 後の演習問題4.2.7を使うとかんたん.
 \end{ans}
 
 \begin{ans}
@@ -1797,6 +1798,42 @@
   正規部分群となるのは, 位数$12$の場合に言及したとおり, 部分群が共役類の和となる場合である.
   これをみたすのは, $\{e\}$, $\gen{(1\ 2)(3\ 4), (1\ 3)(2\ 4)}$,
   $\gen{(1\ 2\ 3), (1\ 2)(3\ 4)} (= A_4)$, $\mathfrak{S}_4$.
+\end{ans}
+
+\fakesubsection{4.3 交換子群と可解群}
+
+\begin{ans}
+  計算するだけなので略.
+\end{ans}
+
+\begin{ans}
+  (1) (積で閉じていること) $A, B \in N_i$を$A = (a_{jk})$, $B = (b_{jk})$とすると,
+  $(AB)_{jk} = \sum_l a_{jl}b_{lk}0$.
+  (a) $j > k$ならば, $j > l$または$l > k$がつねに成り立つので, $(AB)_{jk} = 0$.
+  (b) $j = k$ならば, $j = k = l$のときのみ$a_{jl}b_{lk} = 1$でそれ以外は$j$$0$なので, $(AB)_{kk} = 1$.
+  (c) $j + i > k > j$とする. このとき$a_{jl} = 0$となるのは$l \in [1, j) \cup (j, j + i) (\supset [1, j) \cup (j, k])$,
+  $b_{lk} = 0$となるのは$l \in (k - i, k) \cup (k, n] (\supset [j, k) \cup (k, n])$のときである.
+  両者の区間和は$[1, n]$を覆うので, つねに$a_{jl}b_{lk} = 0$, よって$(AB)_{jk} = 0$.
+  以上により$AB \in N_i$.\\
+  (逆元で閉じていること) $A \in N_i$とする. $B = I - A$とおくと,
+  $B^{n} = 0$であることが計算で確かめられる.
+  よって$A = I - B$の逆元は$I + B + B^2 + \cdots + B^{n-1}$.
+  これは$N_i$の元である.\\
+  (2) $A \in N_1$, $B \in N_i$とする.
+  $C = I - A$, $D = I - B$とおくと,
+  \[
+    ABA^{-1}B^{-1} = (I - C)(I - D)(I + C + C^2 \cdots + C^{n-1})(I + D + D^2 + \cdots + D^{n-1})
+  \]
+  これは$I + CDX + DCY + ZD^2\ (X, Y, Z \in N_1)$と整理できるので, $N_{i+1}$の元である.\\
+  (3) 一般に, $G$の部分群の列$G = G_0 \supset G_1 \supset \cdots \supset G_n = \{1\}$が
+  $i = 0,..., n - 1$に対して$[G, G_i] \subset G_{i+1}$をみたすならば, $G$はべき零群であることを示す.
+  このときとくに$[G, G_{i+1}] \subset G_{i+1}$が成り立つから,
+  任意の$a \in G$, $b \in G_{i+1}$に対して$aba^{-1} \in G_{i+1}b = G_{i+1}$.
+  よって$G_{i+1} \triangleleft G$.
+  また$aG_{i+1} \in G/G_{i+1}$, $bG_{i+1} \in G_i/G_{i+1}$を任意にとると,
+  $aG_{i+1} \cdot bG_{i+1} \cdot (aG_{i+1})^{-1} \cdot (bG_{i+1})^{-1} = (aba^{-1}b^{-1})G_{i+1} = G_{i+1}$.
+  よって$aG_{i+1}$と$bG_{i+1}$は可換であるから, $G_i/G_{i+1}$は$G/G_{i+1}$の中心に含まれる.
+  よって$G$はべき零群である. 以上の事実を$N_1$の部分群の列$N_1 \supset N_2 \supset \cdots N_{n} = \{1\}$に適用すればよい.
 \end{ans}
 
 \end{document}
