--- a/main.tex
+++ b/main.tex
@@ -1836,4 +1836,52 @@
   よって$G$はべき零群である. 以上の事実を$N_1$の部分群の列$N_1 \supset N_2 \supset \cdots N_{n} = \{1\}$に適用すればよい.
 \end{ans}
 
+\fakesubsection{4.4 p群}
+
+\begin{ans}
+  (アイディア: 前の演習問題の解答で示したように, $p$群$G$に対して$[G, G_i] \subset G_{i+1}$をみたす減少列の存在を示せばよい.
+  減少列の最後の$2$つの要素の候補として$Z(G) \supsetneq \{1\}$が簡単に思いつく.
+  そこで, 減少列を逆向きに構成することを考える. 添字も逆向きにつけることにして, $G_0 = \{1\}$, $G_1 = Z(G)$からはじめて
+  $[G, G_{i+1}] \subset G_{i}$をみたし、かつどこかで$G_n = G$となる増大列を構成すればよい.
+  $G_{i}$に対して$G_{i+1}$をなるべく大きく取るようにすれば, 群が真に増大していって$G$に到達する可能性がありそうである.)\\
+
+  \underline{補題}: $H \triangleleft G$とする. このとき,
+  \[
+    K = \{x \mid x \in G \land [G, x] \subset H \}
+  \]
+  と定めると, $K \supset H$かつ$K \triangleleft G$.\\
+
+  \underline{証明}: $x, y \in K$とする. 任意の$g \in G$に対して
+  \[
+    gx^{-1}g^{-1}x = (gx^{-1}g^{-1})x(gx^{-1}g^{-1})^{-1}x^{-1} \cdot (gxg^{-1}x^{-1})^{-1} \in H
+  \]
+  より$x^{-1} \in K$. また,
+  \[
+    gxyg^{-1}y^{-1}x^{-1} = (gx)y(gx)^{-1}y^{-1} \cdot (yg)x(yg)^{-1}x^{-1} \in H
+  \]
+  より$xy \in K$. さらに$g_0 \in G$を任意に取ると,
+  \[
+    g(g_0xg_0^{-1})g^{-1}(g_0xg_0^{-1})^{-1} = (gg_0)x(gg_0)^{-1}x^{-1} \cdot (g_0xg_0^{-1}x^{-1})^{-1} \in H
+  \]
+  より$g_0xg_0^{-1} \in K$なので$K$は正規部分群である.
+  $K$が$H$を含むことは, $H$が正規部分群であることから従う.\\
+
+  \underline{例}: $H = \{1\}$のとき, $K = Z(G)$.\\
+
+  補題を$G_0 = \{1\}$から始めて$G_i$に適用して$G_{i+1}$を得ることを繰り返して,
+  増大列
+  \[
+    G_0 = \{1\} \subset G_1 \subset G_2 \subset \cdots \subset G_i \subset G_{i+1} \subset \cdots
+  \]
+  で$G_i \triangleleft G$かつ$[G, G_{i+1}] \subset G_{i}$をみたすものが得られる.
+  もし$G_i \neq G$ならば, $G/G_i$は$p$群なので命題4.4.3より$Z(G/G_i) \neq \{1\}$.
+  したがって$a \notin G_i$で$aG_i \in Z(G/G_i)$なるものがある. この$a$と任意の$g \in G$について,
+  \[
+    (gG_i)(aG_i)(g^{-1}G_i)(a^{-1}G_i) = (gG_i)(g^{-1}G_i)(aG_i)(a^{-1}G_i) = G_i
+  \]
+  であることから$gag^{-1}a^{-1} \in G_i$, よって$a \in G_{i+1}$.
+  すなわち$G_i \subsetneq G_{i+1}$である.
+  したがって上の増大列はある$n$について$G_n = G$となるまで真に増大し続けるので, $G$はべき零.
+\end{ans}
+
 \end{document}
