--- a/main.tex
+++ b/main.tex
@@ -1496,17 +1496,20 @@
   (1) $N$は巡回群であるから, $N$の生成元を$1$つ固定して,
   その元がどの生成元に移るかを定めることによって, $\mathrm{Aut}N$の元が定まる.
   逆に, $\mathrm{Aut}N$の元は$N$の生成元を生成元に移すものであるから, $\abs{\mathrm{Aut}N}$は生成元の個数, すなわち$16$に等しい.\\
-  (2) $N$が$G$の中心に含まれないと仮定して, 矛盾を導く.
-  $n \mapsto gng^{-1}$は$N$の自己同型を与えるが, この形の自己同型全体は, $\mathrm{Aut}N$の部分群をなすことに注意する.
-  この部分群は$G$の内部自己同型全体のなす群において$N$上で等しいものを同一視したものであるから,
-  以後$\mathrm{Inn}_GN$と書くことにしよう (これはたぶん一般的な記法ではない).
-  (1) より$\abs{\mathrm{Aut}N} = 16$であったから, $\abs{\mathrm{Inn}_GN}$は$2$の冪である.
-  また, $N$が$G$の中心に含まれないから, $g_0n_0g_0^{-1} \neq n_0$なる$g_0 \in G$, $n_0 \in N$がある.
-  したがって, $\mathrm{Inn}_GN$の$N$への作用$(\phi, n) \mapsto \phi(n)$による$n_0$の軌道の濃度は,
-  $\abs{\mathrm{Inn}_GN}$の約数で, $1$と異なるので偶数である.
-  一方, この作用は$G$の$N$への共役による作用とみなせるから, $n_0$の軌道の濃度は$\abs{G}$の約数でもあるはずである.
-  しかし$\abs{G}$は奇数であったから, 矛盾.\\
-  (考察) $N$の位数を一般の (奇) 素数としたときにも同じ結論が得られるか？ $G$の共役による$N\setminus\{1_G\}$への作用が推移的であればOK. (これは真か？)
+  (2) $n \mapsto gng^{-1}$は$N$の自己同型を与えるが, この形の自己同型全体は, $\mathrm{Aut}N$の部分群をなすことに注意する.
+  この部分群は$G$の内部自己同型 (inner automorphism) 全体のなす群において$N$上で等しいものを同一視したものであるから,
+  以後$\mathrm{Inn}_{G, N}$と書くことにしよう.
+  (1) より$\abs{\mathrm{Aut}N} = 16$であったから, $\abs{\mathrm{Inn}_{G, N}}$は$2$の冪である.
+  よって任意に$n_0 \in N$をとると, $\mathrm{Inn}_{G, N}$の$N$への作用$(\phi, n) \mapsto \phi(n)$による$n_0$の軌道の濃度は,
+  $\abs{\mathrm{Inn}_{G, N}}$の約数であり, これもまた$2$の冪である.
+  一方, この作用は$G$の$N$への共役による作用とみなせるから, $n_0$の軌道の濃度は$\abs{G}$の約数でもあり, 奇数である.
+  したがって$n_0$の軌道の濃度は$1$. すなわち任意の$g \in G$に対して$gn_0g^{-1} = n_0$
+  このことは, $N$が$G$の中心に含まれることを意味する.\\
+  ((2) の別解) 準同型$\varphi: G \rightarrow \mathrm{Aut}N$を$g \mapsto (n \mapsto gng^{-1})$で定める.
+  $\mathrm{Im}\varphi$は$\mathrm{Aut}N$の部分群なので位数は$2$の冪である.
+  一方で準同型定理より$\mathrm{Im}\varphi$の位数は$G$の位数の約数なので奇数である.
+  したがって$\abs{\mathrm{Im}\varphi} = 1$なので, $\mathrm{Im}\varphi = \{\mathrm{Id}_N\}$.
+  すなわち任意の$g \in G$, $n \in N$にたいして$gng^{-1} = n$が成り立つので, $N$は$G$の中心に含まれる.
 \end{ans}
 
 \begin{ans}
@@ -1712,9 +1715,8 @@
 \end{ans}
 
 \begin{ans}
-  部分群の共役類なるものは本文で定義していないが, $G$の部分群$H$に対して$gHg^{-1}$もまた$G$の部分群なので,
-  $H$と$gHg^{-1}$を部分群として共役であるということにし, この同値関係による同値類を部分群の共役類と呼ぶことにする.
-  また, 共役類の代表元である部分群の生成元を巡回置換の積の形で示せば, 同じ共役類に属する他の部分群の生成元も, その巡回置換の要素の入れ替えによって容易に得られることに注意する.
+  部分群の共役類は4.5節で定義している.
+  共役類の代表元である部分群の生成元を巡回置換の積の形で示せば, 同じ共役類に属する他の部分群の生成元も, その巡回置換の要素の入れ替えによって容易に得られることに注意する.
   そこで, 各共役類の代表元の生成元を巡回置換の積の形で示すことで解答とする.\\
   共役な部分群の位数は等しく, $\mathfrak{S}_4$の部分群の位数は1, 2, 3, 4, 6, 8, 12, 24のいずれかなので, それぞれについて考察する.\\
   \underline{位数$1$:}
@@ -1827,7 +1829,7 @@
   これは$I + CDX + DCY + ZD^2\ (X, Y, Z \in N_1)$と整理できるので, $N_{i+1}$の元である.\\
   (3) 一般に, $G$の部分群の列$G = G_0 \supset G_1 \supset \cdots \supset G_n = \{1\}$が
   $i = 0,..., n - 1$に対して$[G, G_i] \subset G_{i+1}$をみたすならば, $G$はべき零群であることを示す.
-  このときとくに$[G, G_{i+1}] \subset G_{i+1}$が成り立つから,
+  この条件をみたすときとくに$[G, G_{i+1}] \subset G_{i+1}$が成り立つから,
   任意の$a \in G$, $b \in G_{i+1}$に対して$aba^{-1} \in G_{i+1}b = G_{i+1}$.
   よって$G_{i+1} \triangleleft G$.
   また$aG_{i+1} \in G/G_{i+1}$, $bG_{i+1} \in G_i/G_{i+1}$を任意にとると,
@@ -1839,11 +1841,11 @@
 \fakesubsection{4.4 p群}
 
 \begin{ans}
-  (アイディア: 前の演習問題の解答で示したように, $p$群$G$に対して$[G, G_i] \subset G_{i+1}$をみたす減少列の存在を示せばよい.
+  (アイディア: 演習問題4.3.2 (3) の解答で示したように, $p$群$G$に対して$[G, G_i] \subset G_{i+1}$をみたす減少列の存在を示せばよい.
   減少列の最後の$2$つの要素の候補として$Z(G) \supsetneq \{1\}$が簡単に思いつく.
   そこで, 減少列を逆向きに構成することを考える. 添字も逆向きにつけることにして, $G_0 = \{1\}$, $G_1 = Z(G)$からはじめて
   $[G, G_{i+1}] \subset G_{i}$をみたし、かつどこかで$G_n = G$となる増大列を構成すればよい.
-  $G_{i}$に対して$G_{i+1}$をなるべく大きく取るようにすれば, 群が真に増大していって$G$に到達する可能性がありそうである.)\\
+  $G_{i}$に対して$G_{i+1}$をなるべく大きく取るようにすれば, 列$\{G_i\}$が狭義増大列となってやがて$G$に到達する可能性がありそうである.)\\
 
   \underline{補題}: $H \triangleleft G$とする. このとき,
   \[
@@ -1882,6 +1884,40 @@
   であることから$gag^{-1}a^{-1} \in G_i$, よって$a \in G_{i+1}$.
   すなわち$G_i \subsetneq G_{i+1}$である.
   したがって上の増大列はある$n$について$G_n = G$となるまで真に増大し続けるので, $G$はべき零.
+\end{ans}
+
+\fakesubsection{4.5 シローの定理}
+
+\begin{ans}
+  (1) $\sigma(1) = (1\ 3\ 2)$, $\sigma((1\ 2)(3\ 4)) = (2\ 3\ 4)$より,
+  $\sigma(y) = \{(1\ 3\ 2), (2\ 3\ 4)\}$.
+  (2) $\tau(1) = 1$の場合と$\tau(1) = (1\ 2)(3\ 4)$の場合が考えられる.
+  前者の場合は$\tau = 1$, 後者の場合は$\tau = (1\ 2)(3\ 4)$で,
+  それぞれ$\tau((1\ 2)(3\ 4)) = (1\ 2)(3\ 4)$, $\tau((1\ 2)(3\ 4)) = 1$
+  が成り立つので, $\{1, (1\ 2)(3\ 4)\}$が$y$の安定化群.
+\end{ans}
+
+\begin{ans}
+  (1) 命題4.1.10でみたように, $D_4$元は$\tau^i\sigma^j\ (i = 0, 1,\ j = 0, 1, 2, 3)$
+  の形で書ける. これらのうち, 位数$2$の元が生成するものを考えればよい.
+  具体的には, $\gen{\sigma^2}$, $\gen{\tau}$, $\gen{\tau\sigma}$, $\gen{\tau\sigma^2}$, $\gen{\tau\sigma^3}$.
+  (2) 明らかに, 型の異なるものは同じ軌道に含まれない.
+  したがって, $\{\gen{\tau}, \gen{\tau\sigma^2}\}$と
+  $\{\gen{\sigma^2}, \gen{\tau\sigma}, \gen{\tau\sigma^3}\}$とは軌道が異なる.
+  また, 共役による作用によって$\tau$の冪は不変なので,
+  $\{\gen{\sigma^2}, \gen{\tau\sigma}, \gen{\tau\sigma^3}\}$はさらに
+  $\{\gen{\sigma^2}\}$と$\{\gen{\tau\sigma}, \gen{\tau\sigma^3}\}$とに分かれる.
+  $\tau = \sigma(\tau\sigma^2)\sigma{-1}$, $\tau\sigma = \sigma(\tau\sigma^3)\sigma^{-1}$なので,
+  軌道はこれ以上は細分されない.
+  (3) $\gen{\tau}$について.
+  共役による作用を考えているので, 安定化群の元$\rho$について, $\rho(\tau) = \tau$が成り立つ.
+  $\tau\tau\tau^{-1} = \tau$, $\sigma^2\tau\sigma^{-2} = \tau$なので,
+  $\tau, \sigma^2 \in G_{\gen{\tau}}$. よって$\gen{\tau, \sigma^{2}} \subset G_{\gen{\tau}}$.
+  また$\sigma\tau\sigma^{-1} = \tau\sigma^2$により$\sigma \notin G_{\gen{\tau}}$なので,
+  $\abs{G_{\gen{\tau}}} \le 4$. よって$G_{\gen{\tau}} = \gen{\tau, \sigma^2}$.
+  $\gen{\sigma^2}$について, 安定化群は明らかに$G$.
+  $\gen{\tau\sigma}$の安定化群は, $\gen{\tau}$の安定化群と同様にして$\gen{\tau\sigma, \sigma^2}$であることがわかる.
+  (注意: 演習問題4.1.12の解答に記した考察より, 安定化群は軌道の代表元の選び方によらない.)
 \end{ans}
 
 \end{document}
