--- a/main.tex
+++ b/main.tex
@@ -1920,4 +1920,37 @@
   (注意: 演習問題4.1.12の解答に記した考察より, 安定化群は軌道の代表元の選び方によらない.)
 \end{ans}
 
+\begin{ans}
+  (1) 途中までは例題4.5.8と同様.
+  シロー$p$部分群の数を$s$, シロー$q$部分群の数を$t$とする.
+  $s$, $t$の可能性はそれぞれ$1, q$および$1, p$である.
+  もし$s = q$ならば$q \equiv 1 \mod p$なので, とくに$q > p$である.
+  このとき$p \not\equiv 1 \mod q$より$t = 1$.
+  よって$s, t$のいずれかは$1$なので, シロー$p$部分群とシロー$q$部分群の少なくとも一方が正規部分群である.
+  したがって$G$は単純群でない.\\
+  (2) このとき明らかに$q \not\equiv 1 \mod p$も成り立つので,
+  例題4.5.8とまったく同様の議論により$G$は巡回群である.\\
+  (3) $30$以下の素数$2, 3, 5, 7, 11, 13, 17, 19, 23, 29$のうちの異なる$2$つの積から$60$未満のものを挙げるとよい.
+  (2)をみたす$q$の候補はただちに$3, 5, 7$まで絞り込めるので, それほど大変でもない.
+\end{ans}
+
+\begin{ans}
+  (1)例題4.5.8と同様にして,
+  $G$のシロー$2$部分群の数を$s$, シロー$5$部分群の数を$t$とする.
+  $s$, $t$の可能性はそれぞれ$1, 5$および$1, 2, 4, 8$である.
+  $2, 4, 8$はいずれも$\mod 5$で$1$と合同ではないので, $t = 1$.
+  したがって, シロー$5$部分群が正規部分群であるので, $G$は単純群でない.\\
+  (2) 同様にシロー$7$部分群が正規部分群であることが示される.
+  (3) シロー$3$部分群が正規部分群であることが示される. (演習問題2.8.2を用いてもよい.)
+\end{ans}
+
+\begin{ans}
+  シロー$7$部分群の個数は$1, 8$のいずれかである. $1$の場合はこれが正規部分群である.
+  そこでシロー$7$部分群の個数が$8$の場合を考える.
+  シロー$7$部分群が巡回群であることから, これらは互いに生成元を共通元として持たない.
+  よって, $G$には位数$7$の元が$6 \cdot 8 = 48$個ある.
+  したがってシロー$2$部分群に属しうる元の個数は$56 - 48 = 8$個のみなので, シロー$2$部分群の個数は$1$であり,
+  この場合はシロー$2$部分群が正規部分群である.
+\end{ans}
+
 \end{document}
