エンジンをLuaLaTeXに変更

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,8 @@
-\documentclass{amsart}
+\documentclass{article}
 
-\usepackage{amsmath, amssymb}
+\usepackage{luatexja}
+
+\usepackage{amsmath, amssymb, amsthm}
 \usepackage{bm}
 \usepackage{mathtools}
 \usepackage{ytableau}
