--- a/main.tex
+++ b/main.tex
@@ -1540,42 +1540,32 @@
   (1) に挙げた代表元のうち, $A_5$に含まれるのは$(1\ 2\ 3\ 4\ 5)$, $(1\ 2\ 3)$, $(1\ 2)(3\ 4)$, $1$の$4$つである.
 
   \underline{$(1\ 2\ 3\ 4\ 5)$について.}
-  長さ$5$の巡回置換はすべて
-  $(\sigma(1)\ \sigma(2)\ \sigma(3)\ \sigma(4)\ \sigma(5)) = \sigma(1\ 2\ 3\ 4\ 5)\sigma^{-1}$
-  と書けることから, $A_5$において$(1\ 2\ 3\ 4\ 5)$と共役であることは, この$\sigma$が偶置換であることと同値である.
-  一方, $\sigma$が奇置換であるときには,
-  $\sigma(1\ 2\ 3\ 4\ 5)\sigma^{-1} = \sigma(1\ 2)(2\ 1\ 3\ 4\ 5)(1\ 2)\sigma^{-1}$
-  より,この巡回置換は$A_5$において$(2\ 1\ 3\ 4\ 5)$と共役である.
-  したがって$\mathfrak{S}_5$における$(1\ 2\ 3\ 4\ 5)$の共役類は,
+  $\sigma \in A_5$が$\mathfrak{S}_5$において$(1\ 2\ 3\ 4\ 5)$と共役であるとすると,
+  ある$\tau \in \mathfrak{S}_5$について$\sigma = \tau(1\ 2\ 3\ 4\ 5)\tau^{-1}$.
+  $\tau$が偶置換ならば$\sigma$は$A_5$において$(1\ 2\ 3\ 4\ 5)$と共役,
+  $\tau$が奇置換ならば$\sigma = \tau(1\ 2)(2\ 1\ 3\ 4\ 5)(1\ 2)\tau^{-1}$より$\sigma$は$A_5$において$(2\ 1\ 3\ 4\ 5)$と共役である.
+  すなわち$\sigma$は$(1\ 2\ 3\ 4\ 5)$と$(2\ 1\ 3\ 4\ 5)$のいずれかと共役.
+
+  一方, $(1\ 2\ 3\ 4\ 5)$の$\mathfrak{S}_5$における共役類と, $A_5$における共役類が一致しないことが以下のようにして示せる.
+  $A_5$の共役による作用について, $(1\ 2\ 3\ 4\ 5)$の安定化群を$H$とする.
+  明らかに, $\langle(1\ 2\ 3\ 4\ 5)\rangle \subset H$である.
+  よって, $A_5$における$(1\ 2\ 3\ 4\ 5)$の共役類のサイズは$\abs{A_5}/\abs{H} \le \abs{A_5}/\abs{\langle(1\ 2\ 3\ 4\ 5)\rangle} = 60 / 5 = 12$よりたかだか$12$である.
+  一方, $\mathfrak{S}_5$における$(1\ 2\ 3\ 4\ 5)$の共役類のサイズは$4! = 24$であるから,
+  これらの共役類は一致しない.
+  (注意: $(2\ 1\ 3\ 4\ 5)$についても全く同じ議論によって$A_5$における共役類のサイズがたかだか$12$であるといえるので, 結局どちらの共役類のサイズも$12$に等しい.)
+
+  以上により, $\mathfrak{S}_5$における$(1\ 2\ 3\ 4\ 5)$の共役類は,
   $A_5$において$(1\ 2\ 3\ 4\ 5)$を代表元とする共役類と$(2\ 1\ 3\ 4\ 5)$を代表元とする共役類とに細分される.
 
   \underline{$(1\ 2\ 3)$について.}
-  $A_5$の共役による作用についての$(1\ 2\ 3)$の安定化群を$H$とする.
-  明らかに, $\langle(1\ 2\ 3)\rangle \subset H$である.
-  逆に$\nu \in H$とすると, $(\nu(1)\ \nu(2)\ \nu(3)) = \nu(1\ 2\ 3)\nu^{-1} = (1\ 2\ 3)$より
-  数の組として$(\nu(1), \nu(2), \nu(3))$は$(1, 2, 3)$, $(2, 3, 1)$, $(3, 1, 2)$のいずれかに等しい.
-  いずれの場合も, $\nu$を$\{1, 2, 3\}$上に制限したものは, $\langle(1\ 2\ 3)\rangle$に属する.
-  また, $\nu$を$\{1, 2, 3\}$上に制限したものは偶置換であるから, 偶置換$\nu$は$\{4, 5\}$上では恒等写像である.
-  したがって$\nu \in \langle(1\ 2\ 3)\rangle$であるから, $H \subset \langle(1\ 2\ 3)\rangle$.
-  以上により$H = \langle(1\ 2\ 3)\rangle$であることが言えたから,
-  $A_5$の共役による作用についての$(1\ 2\ 3)$の軌道 ($(1\ 2\ 3)$の共役類) の濃度は$\abs{A_5}/\abs{H} = \abs{A_5}/\abs{\langle(1\ 2\ 3)\rangle} = 60 / 3 = 20$.
-  一方, 長さ$3$の巡回置換の個数も${}_5\mathrm{C}_3 \cdot 2 = 20$であるから,
-  長さ$3$の巡回置換はすべて$A_5$において$(1\ 2\ 3)$と共役である.
-  すなわち, $(1\ 2\ 3)$を代表元とする$\mathfrak{S}_5$共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2\ 3)$がそのまま代表元となる.
+  $\sigma = \tau(1\ 2\ 3)\tau^{-1} \Leftrightarrow \sigma = \tau(4\ 5)(1\ 2\ 3)(4\ 5)\tau^{-1}$より,
+  $(1\ 2\ 3)$の$\mathfrak{S}_5$における共役類と$A_5$における共役類は一致する.
 
   \underline{$(1\ 2)(3\ 4)$について.}
-  $\sigma$を$(2, 2)$型の置換とする. すなわち$\sigma = (i\ j)(k\ l)$の形で書ける.
-  $\mathfrak{S}_5$における共役として,
-  $\tau = \begin{pmatrix*}
-    1 & 2 & 3 & 4 & 5 \\
-    i & j & k & l & m
-  \end{pmatrix*}$とおいて$\tau(1\ 2)(3\ 4)\tau^{-1} = \sigma$という関係があるが,
-  もし$\tau$が奇置換ならば$\tau$の代わりに$\tau(1\ 2)$を考えることにより,
-  $A_5$においても$\sigma$と$(1\ 2)(3\ 4)$が共役であることが分かる.
-  すなわち, $(1\ 2)(3\ 4)$を代表元とする$\mathfrak{S}_5$の共役類は$A_5$において細分されておらず, $A_5$の共役類としても$(1\ 2)(3\ 4)$がそのまま代表元となる.
+  $\sigma = \tau(1\ 2)(3\ 4)\tau^{-1} \Leftrightarrow \sigma = \tau(1\ 2)(1\ 2)(3\ 4)(1\ 2)\tau^{-1}$より,
+  $(1\ 2)(3\ 4)$の$\mathfrak{S}_5$における共役類と$A_5$における共役類は一致する.
 
   \underline{$1$について.} 共役類が$1$元集合なので, そのまま$A_5$の共役類の代表元となっている.\\
-  (別解) 後の演習問題4.2.7を使うとかんたん.
 \end{ans}
 
 \begin{ans}
@@ -1589,7 +1579,7 @@
 \end{ans}
 
 \begin{ans}
-  (1) 共役による作用での$(1\ 2)$の軌道 (共役類) は$(2)$型の置換からなり, これは全部で${}_4\mathrm{C}_2 = 6$個あるから,
+  (1) 共役による作用での$(1\ 2)$の軌道 (共役類) は$(2, 1, 1)$型の置換からなり, これは全部で${}_4\mathrm{C}_2 = 6$個あるから,
   $Z_G(\sigma)$の位数, すなわち共役による作用での$(1\ 2)$の安定化群の位数は$\abs{G}/6 = 4$である.
   一方, 明らかに$(1\ 2), (3\ 4) \in Z_G(\sigma)$であるから,
   $\langle (1\ 2), (3\ 4) \rangle \subset Z_G(\sigma)$である.
@@ -1602,11 +1592,11 @@
   $(1\ 2)$を$(3\ 4)$に移すものとして$(1\ 3)(2\ 4), (1\ 4)(2\ 3), (1\ 3\ 2\ 4), (1\ 4\ 2\ 3)$がある.
   以上を合わせて$8$個なので, これらが$Z_G(\sigma)$をなす.
   まとめると$Z_G(\sigma) = \langle (1\ 2), (3\ 4), (1\ 3)(2\ 4) \rangle$.\\
-  (3) 共役による作用での$(1\ 2\ 3)$の軌道は$(3)$型の置換からなり, これは${}_4\mathrm{C}_3 \cdot 2 = 8$個ある.
+  (3) 共役による作用での$(1\ 2\ 3)$の軌道は$(3, 1)$型の置換からなり, これは${}_4\mathrm{C}_3 \cdot 2 = 8$個ある.
   したがって$\abs{Z_G(\sigma)} = \abs{G}/8 = 3$.
   一方, 明らかに$\langle (1\ 2\ 3) \rangle \subset Z_G(\sigma)$であるが,
   $\abs{\langle (1\ 2\ 3) \rangle} = 3$なので$Z_G(\sigma) = \langle (1\ 2\ 3) \rangle$.\\
-  (4) 共役による作用での$(1\ 2\ 3)$の軌道は$(3)$型の置換からなり, これは${}_5\mathrm{C}_3 \cdot 2 = 20$個ある.
+  (4) 共役による作用での$(1\ 2\ 3)$の軌道は$(3, 1, 1)$型の置換からなり, これは${}_5\mathrm{C}_3 \cdot 2 = 20$個ある.
   したがって$\abs{Z_G(\sigma)} = \abs{G}/20 = 6$.
   一方, 明らかに$\langle (1\ 2\ 3), (4\ 5) \rangle \subset Z_G(\sigma)$であるが,
   $\abs{\langle (1\ 2\ 3), (4\ 5) \rangle} = 6$なので,
@@ -1679,13 +1669,13 @@
 \end{ans}
 
 \begin{ans}
-  (1) $i_1,..., i_l$がすべて異なる数ならば, $\tau \in Z_{\mathfrak{S}_n}(\sigma)$は
+  (1) $i_1,..., i_l$がすべて異なる数ならば, $\tau \in Z_{\mathfrak{S}_n}(\sigma)$による共役$\tau\sigma\tau^{-1}$は
   $\sigma$を構成する巡回置換それぞれについて, 数字の列をシフトするものである.
   このシフトは列と同じ長さの巡回置換の累乗であり, 長さが奇数の巡回置換は偶置換であることから, $\tau$は偶置換である.
   したがって$Z_{\mathfrak{S}_n}(\sigma) \subset Z_{A_n}(\sigma)$. 逆の包含関係は自明である.
   またこのとき, $\sigma$の奇置換による共役は, $(1\ 2)\sigma(1\ 2)$の偶置換による共役に他ならない.
   したがって, $\sigma$の$\mathfrak{S}_n$における共役類は, $A_n$における2つの共役類$C(\sigma)$と$C((1\ 2)\sigma(1\ 2))$の和である.
-  この2つの共役類の元の個数が等しいことは,
+  この2つの共役類が相異なるものでありしかも元の個数が等しいことは,
   $\abs{\mathfrak{S}_n}/\abs{Z_{\mathfrak{S}_n}(\sigma)} = 2\abs{A_n}/\abs{Z_{A_n}(\sigma)}$
   と命題4.1.23から分かる.\\
   (2) このとき$i_1,\cdots, i_l$について「偶数が1つある」か「同じ奇数がある」のいずれかが成り立つが,
@@ -1694,7 +1684,10 @@
   このとき, $\tau\sigma\tau^{-1} = \sigma \Longleftrightarrow \tau\tau_0\sigma\tau_0^{-1}\tau^{-1} = \sigma$
   より, $\tau \in Z_{A_n}(\sigma) \Longleftrightarrow \tau\tau_0 \in Z_{\mathfrak{S}_n}(\sigma) \setminus Z_{A_n}(\sigma)$.
   したがって, $Z_{\mathfrak{S}_n}(\sigma) = Z_{A_n}(\sigma) \cup Z_{A_n}(\sigma)\tau_0$.
-  共役類が等しいことも, $\tau_0$の存在から分かる.
+  共役類が等しいことも, $\tau_0$の存在から分かる. \\
+  (1) の別解: $\sigma$を構成する巡回置換ごとに安定化群を考えることで,
+  演習問題4.2.2 (2) の解答と同様の議論により, $\sigma$の$\mathfrak{S}_n$における共役類が$A_n$における元の個数の等しい$2$つの共役類の和であることが先に分かる.
+  このことから$Z_{\mathfrak{S}_n}(\sigma) = Z_{A_n}(\sigma)$も示される.
 \end{ans}
 
 \begin{ans}
@@ -1725,18 +1718,18 @@
   $\{e\}$のみ. \\
   \underline{位数$2$:}
   部分群は位数$2$の元$g$で生成される.
-  $\mathfrak{S}_4$の元で位数が$2$であるのは, 型としては$(2)$と$(2, 2)$のみである.
+  $\mathfrak{S}_4$の元で位数が$2$であるのは, 型としては$(2, 1, 1)$と$(2, 2)$のみである.
   よって, 部分群の共役類は$2$つあり, それぞれの代表元として$\gen{(1\ 2)}$と$\gen{(1\ 2)(3\ 4)}$を挙げることができる.\\
   \underline{位数$3$:} 部分群は位数$3$の元$g$で生成される.
-  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみである.
+  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3, 1)$のみである.
   よって, 部分群の共役類はただ$1$つで, 代表元として$\gen{(1\ 2\ 3)}$を挙げることができる.\\
   \underline{位数$4$:}
   (i) 部分群が位数$4$の元を含むならば, その部分群は位数$4$の元$g$で生成される.
   $\mathfrak{S}_4$の元で位数が$4$であるのは, 型としては$(4)$のみであり,
   この場合の代表元として$\gen{(1\ 2\ 3\ 4)}$を挙げることができる.
   (ii) 部分群が位数$4$の元を含まないとき, 単位元以外の$3$つの元は位数$2$の元である.
-  (ii-a) 位数$2$の元で型$(2)$のものが$2$つ以上あるとし, そのうちの$1$つを$(1\ 2)$とする.
-  もう$1$つの型$(2)$の元としては, 代表元を考えているので, $(1\ 3)$, $(3\ 4)$のみをチェックすればよいが,
+  (ii-a) 位数$2$の元で型$(2, 1, 1)$のものが$2$つ以上あるとし, そのうちの$1$つを$(1\ 2)$とする.
+  もう$1$つの型$(2, 1, 1)$の元としては, 代表元を考えているので, $(1\ 3)$, $(3\ 4)$のみをチェックすればよいが,
   これらのうち$(1\ 2)$と組み合わせて位数$4$の部分群を生成するのは$(3\ 4)$のみである.
   したがって, この場合の代表元としては$\gen{(1\ 2), (3\ 4)}$を挙げることができる.
   (ii-b) 位数$2$の元で型$(2, 2)$のものが$2$つ以上あるとし, そのうちの$1$つを$(1\ 2)(3\ 4)$とする.
@@ -1746,16 +1739,16 @@
   (この場合は部分群の共役類がこの$1$元のみからなる.)\\
   \underline{位数$6$:}
   演習問題2.10.8 (1) で示したように, この部分群には位数$3$の元が存在する.
-  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3)$のみであるから,
+  $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3, 1)$のみであるから,
   この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.8より, この部分群には位数$2$の元で同じ型のものが$3$つ存在する.
-  これらの型$(2, 2)$だとすると上でみたことから位数$4$の部分群があることになり矛盾するので, これらの型は$(2)$である.
+  これらの型$(2, 2)$だとすると上でみたことから位数$4$の部分群があることになり矛盾するので, これらの型は$(2, 1, 1)$である.
   そこでその元の$1$つとしては, (代表元を考えているので) $(1\ 2)$と$(1\ 4)$のみをチェックすればよい.
   これらのうち$(1\ 2\ 3)$と組み合わせて位数$6$の部分群を生成するのは, $(1\ 2)$のみである.
   ((1\ 4)(1 2 3) = (1\ 2\ 3\ 4)で位数$4$の元ができるので, $(1\ 4)$は除外される.)
   よって代表元としては$\gen{(1\ 2\ 3), (1\ 2)} (\simeq \mathfrak{S}_3)$を挙げることができる.\\
   \underline{位数$8$:}
-  この部分群がもし型$(2)$の元を3つ以上含むとすると, その部分群として$\mathfrak{S}_3$と同型な群があることになり矛盾.
-  したがって型$(2)$の元は$2$つ以下である.また型$(2, 2)$の元は$\mathfrak{S}_4$には3つしかない.
+  この部分群がもし型$(2, 1, 1)$の元を3つ以上含むとすると, その部分群として$\mathfrak{S}_3$と同型な群があることになり矛盾.
+  したがって型$(2, 1, 1)$の元は$2$つ以下である.また型$(2, 2)$の元は$\mathfrak{S}_4$には3つしかない.
   したがって, 位数$8$の部分群は, 型$(4)$の元を$2$つ以上含むことになる.
   代表元を考えているので, $(1\ 2\ 3\ 4)$は必ず含まれるとし, これと別の$(1\ i\ j\ k)$の形の元を含むと考えてよい.
   この組み合わせは$5$通りあるが,
@@ -1768,7 +1761,7 @@
   \end{align*}
   により, 位数$3$の元を生成しないのは$(1\ 2\ 3\ 4)$と$(1\ 4\ 3\ 2) = (1\ 2\ 3\ 4)^{-1}$の組み合わせのみである.
   したがって型$(4)$の元はこの$2$つのみと考えてよい.
-  型$(2)$の元について再び考えると, その共役の作用によって$(1\ 2\ 3\ 4)$が上で除外された型$(4)$の元に移ってはいけないことから,
+  型$(2, 1, 1)$の元について再び考えると, その共役の作用によって$(1\ 2\ 3\ 4)$が上で除外された型$(4)$の元に移ってはいけないことから,
   $(1\ 2), (1\ 4), (2\ 3), (3\ 4)$は除外される. したがって残りは$(1\ 3)$と$(2\ 4)$であるが,
   ここまでで残ったものをすべて書き出すと,
   $\{e, (1\ 2\ 3\ 4), (1\ 4\ 3\ 2), (1\ 3), (2\ 4), (1\ 2)(3\ 4), (1\ 3)(2\ 4), (1\ 4)(2\ 3) \}$
@@ -1781,14 +1774,14 @@
   そこに含まれる元と同じ型の元はすべて含まれていなければならない.
   型ごとに元の数を確認すると,
   \begin{itemize}
-    \item 型$(1)$: $1$つ
-    \item 型$(2)$: $6$つ
-    \item 型$(3)$: $8$つ
+    \item 型$(1, 1, 1, 1)$: $1$つ
+    \item 型$(2, 1, 1)$: $6$つ
+    \item 型$(3, 1)$: $8$つ
     \item 型$(4)$: $6$つ
     \item 型$(2, 2)$: $3$つ
   \end{itemize}
   であり, 部分群に$e$が必ず含まれることから始めて考察すると,
-  型$(1)$, 型$(2, 2)$, 型$(3)$の元によってこの部分群は構成されることになり, 群構造は$1$つに定まる.
+  型$(1, 1, 1, 1)$, 型$(2, 2)$, 型$(3, 1)$の元によってこの部分群は構成されることになり, 群構造は$1$つに定まる.
   これはあきらかに$A_4$である.
   あまり意味はないがここまでと同様に生成元で簡潔に書くと, $\gen{(1\ 2\ 3), (1\ 2)(3\ 4)}$となる.\\
   \underline{位数$24$:} これは$\mathfrak{S}_4$自身.\\
