第2版にナンバリングを合わせる

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 
 \begin{document}
 
-\noindent(第1版第11刷をもとにしている.)
+\noindent(第2版第1刷をもとにしている.)
 
 \fakesection{第1章 集合論}
 \fakesubsection{1.1 集合と論理の復習}
@@ -183,7 +183,8 @@
   解答例にないものでは, 双対空間$V^\ast$, テンソル積$V \otimes V$など.
 \end{ans}
 
-\fakesubsection{1.3 選択公理とツォルンの補題}
+\fakesubsection{1.3 値が写像である写像}
+\fakesubsection{1.4 選択公理とツォルンの補題}
 
 \begin{ans}
   (1) $X$の全順序部分集合を任意に取り,
@@ -568,10 +569,10 @@
   (1) 「…」が成り立つとする.
   $i_1 = m, i_2 = 0$とすると, $x^{i_1} = x^{i_2} = 1$.
   よって$y^{i_1} = y^{i_2}$, すなわち$y^m = 1$.
-  命題2.4.18より, $m$は$n$の倍数である.
+  命題2.4.19より, $m$は$n$の倍数である.
   逆に, $m$が$n$の倍数であるとする.
   $x^{i_1} = x^{i_2}$であるような任意の$i_1, i_2 \in \mathbb{Z}$に対して,
-  $i_1 - i_2$は命題2.4.18より$m$の倍数であり, 仮定からこれは$n$の倍数でもある.
+  $i_1 - i_2$は命題2.4.19より$m$の倍数であり, 仮定からこれは$n$の倍数でもある.
   よって$y^{i_1 - i_2} = 1$, すなわち$y^{i_1} = y^{i_2}$であるから, 「…」が成り立つ.
   以上により, 「…」が成り立つための必要十分条件は, $m$が$n$の倍数であることである.\\
   (2) $m$, $n$が (1) の性質を満たすことから, $\phi(x^i) = y^i$と定めると$\phi$はwell-definedである.
@@ -695,7 +696,7 @@
   の$8$通りなので, $\mathrm{Aut}(G)$の位数は$8$.
   また, $\overline{1} \mapsto \overline{k}$なる自己同型は$x \mapsto \overline{k}x$と書けるので,
   明らかに$\mathrm{Aut}(G)$はアーベル群である.
-  有限アーベル群の基本定理 (定理4.8.1) より,
+  有限生成アーベル群の基本定理 (定理4.8.2) より,
   $\mathrm{Aut}(G) \cong \Z{8}$
   または
   $\mathrm{Aut}(G) \cong \Z{2} \times \Z{4}$
@@ -723,6 +724,10 @@
   互換$(1\ 2)$と可換な元は$1$と$(1\ 2)$のみであることが計算で確かめられ,
   また$(1\ 3)$についても同様なので, $G$のすべての元と可換であるのは$1$のみである.
   よって$\sigma = 1$.
+\end{ans}
+
+\begin{ans}
+  TODO: 後で書く.
 \end{ans}
 
 \fakesubsection{2.6 同値関係と剰余類}
@@ -763,6 +768,10 @@
   $\sigma \in H(3\ 4)H$である.
   以上により, 任意の$\sigma \in G$に対して$\sigma \in H1_GH$または$\sigma \in H(3\ 4)H$が成り立つ.
   $(3\ 4) \notin H1_GH$より, $\{1_G, (3\ 4)\}$が$1$つの完全代表系である.
+\end{ans}
+
+\begin{ans}
+  TODO: 後で書く.
 \end{ans}
 
 \begin{ans}
@@ -1045,6 +1054,10 @@
   である. $\Z{45}$, $\Z{3}$, $\Z{7}$において$2$倍写像は全単射なので,
   $G/2G \cong \Z{2} \times \Z{2}$である.
   したがって例題2.10.12と同様にして, $G$の指数$2$の部分群の個数は$3$である.
+\end{ans}
+
+\begin{ans}
+  TODO: 後で書く.
 \end{ans}
 
 \begin{ans}
@@ -1491,7 +1504,7 @@
 
 \begin{ans}
   $G$が推移的に作用するとし, $G \cdot x = \{1, \cdots , n\}$であるとする. ($x$は実のところ何でもよい.)
-  このとき命題4.1.23より, $\abs{G} = \abs{G \cdot x}\abs{G_x} = n\abs{G_x}$.
+  このとき命題4.1.24より, $\abs{G} = \abs{G \cdot x}\abs{G_x} = n\abs{G_x}$.
 \end{ans}
 
 \begin{ans}
@@ -1677,7 +1690,7 @@
   したがって, $\sigma$の$\mathfrak{S}_n$における共役類は, $A_n$における2つの共役類$C(\sigma)$と$C((1\ 2)\sigma(1\ 2))$の和である.
   この2つの共役類が相異なるものでありしかも元の個数が等しいことは,
   $\abs{\mathfrak{S}_n}/\abs{Z_{\mathfrak{S}_n}(\sigma)} = 2\abs{A_n}/\abs{Z_{A_n}(\sigma)}$
-  と命題4.1.23から分かる.\\
+  と命題4.1.24から分かる.\\
   (2) このとき$i_1,\cdots, i_l$について「偶数が1つある」か「同じ奇数がある」のいずれかが成り立つが,
   いずれの場合も, 奇置換$\tau_0$を$\tau_0\sigma\tau_0^{-1} = \sigma$が成り立つようにとることができる.
   (前者の場合は偶数長の巡回のシフト, 後者の場合は同じ奇数長の巡回を交換するものを考えればよい.)
@@ -1738,9 +1751,9 @@
   この部分群$\gen{(1\ 2)(3\ 4), (1\ 3)(2\ 4)}$を代表元として挙げることができる.
   (この場合は部分群の共役類がこの$1$元のみからなる.)\\
   \underline{位数$6$:}
-  演習問題2.10.8 (1) で示したように, この部分群には位数$3$の元が存在する.
+  演習問題2.10.9 (1) で示したように, この部分群には位数$3$の元が存在する.
   $\mathfrak{S}_4$の元で位数が$3$であるのは, 型としては$(3, 1)$のみであるから,
-  この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.8より, この部分群には位数$2$の元で同じ型のものが$3$つ存在する.
+  この部分群に$(1\ 2\ 3)$が含まれるとしてよい. 再び演習問題2.10.9より, この部分群には位数$2$の元で同じ型のものが$3$つ存在する.
   これらの型$(2, 2)$だとすると上でみたことから位数$4$の部分群があることになり矛盾するので, これらの型は$(2, 1, 1)$である.
   そこでその元の$1$つとしては, (代表元を考えているので) $(1\ 2)$と$(1\ 4)$のみをチェックすればよい.
   これらのうち$(1\ 2\ 3)$と組み合わせて位数$6$の部分群を生成するのは, $(1\ 2)$のみである.
@@ -1879,6 +1892,10 @@
   であることから$gag^{-1}a^{-1} \in G_i$, よって$a \in G_{i+1}$.
   すなわち$G_i \subsetneq G_{i+1}$である.
   したがって上の増大列はある$n$について$G_n = G$となるまで真に増大し続けるので, $G$はべき零.
+\end{ans}
+
+\begin{ans}
+  TODO: 後で書く.
 \end{ans}
 
 \fakesubsection{4.5 シローの定理}
