--- a/main.tex
+++ b/main.tex
@@ -1910,7 +1910,7 @@
 \end{ans}
 
 \begin{ans}
-  (1) 命題4.1.10でみたように, $D_4$元は$\tau^i\sigma^j\ (i = 0, 1,\ j = 0, 1, 2, 3)$
+  (1) 命題4.1.10でみたように, $D_4$の元は$\tau^i\sigma^j\ (i = 0, 1,\ j = 0, 1, 2, 3)$
   の形で書ける. これらのうち, 位数$2$の元が生成するものを考えればよい.
   具体的には, $\gen{\sigma^2}$, $\gen{\tau}$, $\gen{\tau\sigma}$, $\gen{\tau\sigma^2}$, $\gen{\tau\sigma^3}$.
   (2) 明らかに, 型の異なるものは同じ軌道に含まれない.
@@ -1965,4 +1965,56 @@
   この場合はシロー$2$部分群が正規部分群である.
 \end{ans}
 
+\begin{ans}
+  (1) シロー$3$部分群の個数は$1, 10$, シロー$5$部分群の個数は$1, 6$のいずれかである.
+  もしシロー$3$部分群の個数が$10$かつシロー$5$部分群の個数が$6$であれば,
+  位数$3$の元が$20$個かつ位数$5$の元が$24$個存在することになるので矛盾.
+  したがって, シロー$3$部分群とシロー$5$部分群のいずれかが正規部分群である.
+  よって定理2.10.3より$HK$は部分群である.
+  さらに$H \cap K = \{1_G\}$より$\order{HK} = 15$であることと例題4.5.8より
+  $HK \simeq \mathbb{Z}/15\mathbb{Z}$.\\
+  (2) シロー$2$部分群が存在することから, 位数$2$の元$\rho$が存在することがわかる.
+  $\rho$による$G$への共役による作用を考える.
+  $HK$は$G$の正規部分群なので, この作用は$HK$への作用 (自己同型$\phi$) を引き起こす.
+  $HK$の位数$3$の元$\sigma$, 位数$5$の元$\tau$をとって固定すると,
+  $\phi(\sigma)$は$\sigma$か$\sigma^{-1}$のいずれか,
+  $\phi(\tau)$は$\tau$か$\tau^{-1}$のいずれかであることがわかる. ($\phi^2 = \mathrm{id}_{HK}$であることによる.)
+  以下, 場合分けして考える.\\
+  (2-i) $\phi(\sigma) = \sigma$かつ$\phi(\tau) = \tau$の場合.
+  このとき, $\rho$は$HK$および$\rho HK$の元と可換であることから, $\gen{\rho} \simeq \mathbb{Z}/2\mathbb{Z}$は$G$の正規部分群である.
+  したがって, 例4.5.8の後半と同様の議論により, $G \simeq \mathbb{Z}/2\mathbb{Z} \times \mathbb{Z}/15\mathbb{Z} \simeq \mathbb{Z}/30\mathbb{Z}$.\\
+  (2-ii) $\phi(\sigma) = \sigma$かつ$\phi(\tau) = \tau^{-1}$の場合.
+  このとき, 命題4.1.10の関係式より$\gen{\rho, \tau} \simeq D_5$である.
+  明らかに$\gen{\sigma} \cap D_5 = \{1_G\}$.
+  また, $\sigma$が$\rho$および$\tau$と可換であることから,
+  $\gen{\sigma}$の元と$\gen{\rho, \tau}$の元とは可換である.
+  命題2.9.2の途中 ($hk = kh$) からの議論を適用することにより, $G \simeq \gen{\sigma} \times \gen{\rho, \tau} \simeq \mathbb{Z}/3\mathbb{Z} \times D_5$.\\
+  (2-iii) $\phi(\sigma) = \sigma^{-1}$かつ$\phi(\tau) = \tau$の場合.
+  上と同様にして, $G \simeq \mathbb{Z}/5\mathbb{Z} \times D_3$.\\
+  (2-iv) $\phi(\sigma) = \sigma^{-1}$かつ$\phi(\tau) = \tau^{-1}$の場合.
+  このとき, $\rho$と$HK$の元とは命題4.1.10の関係式をみたすので, $G \simeq D_{15}$.\\
+\end{ans}
+
+\begin{ans}
+  (1) シロー$p$部分群の個数の候補は$1, q$であるが, $p > q$のとき$q \not\equiv 1 \mod p$なので, シロー$p$部分群の個数は$1$.
+  したがって$H$は正規部分群である. \\
+  (2) シロー$q$部分群の個数の候補は$1, p, p^2$であるが、$K$が正規部分群でなく、また$p \not\equiv 1 \mod q$なので,
+  シロー$q$部分群の個数は$p^2$である. \\
+  (3) (2)が成り立つとき, シロー$q$部分群は巡回群なので, その共役は互いに単位元のみを共通元にもつ.
+  したがって$G$の位数$q$の元の個数は$p^2(q - 1)$個である. よってシロー$p$部分群の元となりうるものは$p^2$個しかないことから,
+  このとき$H$が正規部分群である.
+\end{ans}
+
+\begin{ans}
+  (1) シロー$2$部分群の個数の候補は$1, 3$である. もし$1$ならシロー$2$部分群が正規部分群であるので,
+  $G$は単純群ではない. $3$ならば, シロー$2$部分群のなす集合への共役による作用に対応して
+  置換表現$G \rightarrow S_3$があり, その核は$G$の自明でない正規部分群である.
+  したがって, いずれにしても$G$は単純群ではない.\\
+  (2) シロー$3$部分群について (1) と同様の考察をおこなう.\\
+  (3) シロー$2$部分群について (1) と同様の考察をおこなう.
+\end{ans}
+
+\begin{ans}
+  ここまでの演習問題と, $p$群が非可換単純群でないことよりしたがう.
+\end{ans}
 \end{document}
