第2版からの追加問題 (2.5.10)

--- a/main.tex
+++ b/main.tex
@@ -727,7 +727,38 @@
 \end{ans}
 
 \begin{ans}
-  TODO: 後で書く.
+  (1) 次のように, $G$の元と$U, L$の元との積と, 行列の基本変形とが対応していることに注意する.
+  \begin{itemize}
+    \item $U$の元を左から掛ける $\Leftrightarrow$ 第$2$行の$x$倍を第$1$行に足す
+    \item $U$の元を右から掛ける $\Leftrightarrow$ 第$1$列の$x$倍を第$2$列に足す
+    \item $L$の元を左から掛ける $\Leftrightarrow$ 第$1$行の$x$倍を第$2$行に足す
+    \item $L$の元を右から掛ける $\Leftrightarrow$ 第$2$列の$x$倍を第$1$列に足す
+  \end{itemize}
+  この変形を任意の$g = \begin{pmatrix}
+    a & b \\
+    c & d \\
+  \end{pmatrix} \in G$に対して次のように適用する. (ただし$x$はその都度適当な値を選ぶ) \\
+  (i) もし$a = 0$ならば$c \neq 0$なので, 第$2$行の$x$倍を第$1行$に足すことで$(1, 1)$成分を非零にする \\
+  (ii) 第$1$行の$x$倍を第$2$行に足して, $(2, 1)$成分を非零にする \\
+  (iii) 第$2$行の$x$倍を第$1$行に足して, $(1, 1)$成分を$1$にする \\
+  (iv) 第$1$行の$x$倍を第$2$行に足して, $(2, 1)$成分を$0$にする \\
+  (vv) 第$1$列の$x$倍を第$2$列に足して, $(1, 2)$成分を$0$にする \\
+  これらの変形のあと, $\det$が$1$であることから行列は単位行列になっている.
+  よって, $g$は$U$, $L$の元の積で表せる.\\
+  (2) $U$, $L$の任意の元$g$に対して$\phi(g) = 1$であることを示せばよい.
+  まず$g = \begin{pmatrix}
+    1 & x \\
+    0 & 1
+  \end{pmatrix} \in U$とする.
+  もし$\abs{\phi(g)} > 1$ならば, $\phi(g)^n\ (n = 1, 2,...)$の絶対値は指数的に増大するが,
+  一方で$g^n = \begin{pmatrix}
+    1 & nx \\
+    0 & 1
+  \end{pmatrix}$より$\phi(g^n)$は$n$の多項式なので矛盾.
+  $\abs{\phi(g)} < 1$としても同様に矛盾するので, $\abs{\phi(g)} = 1$である.
+  また, 通常の位相により$U$は連結かつ$\phi$は連続なので, $\phi(U)$は連結である.
+  したがって$\phi(g) = 1$.
+  $L$の元についても同様である.
 \end{ans}
 
 \fakesubsection{2.6 同値関係と剰余類}
